2015-08-13  Jacob Fenton  <bocajnotnef@gmail.com>

   * scripts/extract-partitions.py: refactored much of the processing into
   generators

2015-08-12  Luiz Irber  <khmer@luizirber.org>

   * khmer/_khmer.cc: Fix a GCC string initialization warning.

2015-08-11  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * CITATION, doc/{index,introduction,user/scripts}.rst, khmer/khmer_args.py:
   formatting fixes and new citation for the software as a whole
   * Makefile: PDF building hints, tweaked dependencies, update coverity URL,
   new target to generate author list for the paper citation 
   * sort-authors-list.py: helper script for the above
   * doc/conf.py: don't generate a module index
   * doc/contributors.rst: formatting, remove references to old lab
   * doc/dev/coding-guidelines-and-review.rst: add C++ version standard
   * doc/dev/getting-started.rst: ccache, git-merge-changelog, and advanced
   commit squashing
   * doc/user/biblio.rst: added links to khmer citation collections
   * doc/user/examples.rst: linked to online version of example scripts
   * doc/user/guide.rst: commented out empty section, added BSD note
   * lib/counting.{cc},lib/*.hh: c++11 fixes: remove unneeded trailing
   semicolons
   * scripts/*.py: line-wrap & scrub output
   * setup.py: turn optimizations back on and -pedantic
   * .mailmap: additional tweaks to author list


2015-08-11  Kevin Murray  <spam@kdmurray.id.au>

   * lib/Makefile: Fix SONAME and ABI versioning to sync with Debian standard
   practice.

2015-08-10  Camille Scott  <camille.scott.w@gmail.com>

   * lib/traversal.{cc,hh}: Add new files with unified traversal machinery.
   Introduce Traverser class to handle finding neighbors and appropriate
   bitmasking.
   * khmer/_khmer.cc,lib/{counting,hashbits,hashtable,labelhash,subset}.{cc,hh}:
   Updated relevant instances of HashIntoType and KMerIterator to use new Kmer
   and KmerIterator, respectively.
   * lib/Makefile: Add -std=c++11 flag.